--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -30,19 +30,19 @@
                     <span class="menu-title">Admin List</span>
                 </a>
             </li>
-            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
                 <a class="nav-link" routerLink="/offers">
                     <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                     <span class="menu-title sub">Coupon Management</span>
                 </a>
-            </li> -->
+            </li>
             <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
                 <a class="nav-link" routerLink="/prducts">
                     <i class="fa fa-product-hunt" aria-hidden="true"></i>
                     <span class="menu-title sub">Products </span>
                 </a>
             </li>
-            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}">
                 <a class="nav-link" routerLink="/banner">
                     <i class="fa fa-picture-o" aria-hidden="true"></i>
                     <span class="menu-title sub">Banners</span>
@@ -71,14 +71,14 @@
                     <i class="icon-drawer menu-icon"></i>
                     <span class="menu-title">Orders </span>
                 </a>
-            </li> -->
+            </li>
             <!-- <li data-toggle="collapse" data-target="#products" class="nav-item collapsed active" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
                 <a class="nav-link" routerLink="/addcontent">
                     <i class="fa fa-file-text"></i>Content Management
                     <span class="menu-title sub arrow"></span>
                 </a>
             </li> -->
-            <!-- <li data-toggle="collapse" data-target="#products" class="collapsed active" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
+            <li data-toggle="collapse" data-target="#products" class="collapsed active" [ngClass]="{'active':pageNav==='content' || pageNav==='addcontent'}">
                 <a class="sub"><i class="fa fa-gift fa-lg"></i> <span class="sub"></span>Content Management <span class="arrow"></span></a>
             </li>
             <ul class="sub-menu collapse" id="products">
@@ -87,7 +87,7 @@
                 <li><a>Delivery Information</a></li>
                 <li><a>Privacy & Policy</a></li>
                 <li><a>Returns</a></li>
-            </ul> -->
+            </ul>
             <!-- <li data-toggle="collapse" data-target="#products" class="collapsed active">
                 <a><i class="fa fa-gift fa-lg"></i> Content Management <span class="arrow"></span></a>
             </li>
@@ -97,12 +97,12 @@
                 <li><a>BTB-H1</a></li>
                 <li><a>BTB-H2</a></li>
             </ul> -->
-            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
                 <a class="nav-link" routerLink="/users">
                     <i class="icon-people menu-icon"></i>
                     <span class="menu-title">Loyalty Management</span>
                 </a>
-            </li> -->
+            </li>
 
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='wholesellers' || pageNav==='addwholesellers'}">
                     <a class="nav-link" routerLink="/wholesellers">
@@ -116,51 +116,6 @@
                     <span class="menu-title">Logout </span>
                 </a>
             </li>
-
-            <!-- <li data-toggle="collapse" data-target="#products" class="collapsed active">
-                <a><i class="fa fa-gift fa-lg"></i> Anlagenauswahl <span class="arrow"></span></a>
-            </li>
-            <ul class="sub-menu collapse" id="products">
-                <li class="active"><a>RFT-H1</a></li>
-                <li><a>RFT-H2</a></li>
-                <li><a>BTB-H1</a></li>
-                <li><a>BTB-H2</a></li>
-            </ul>
-
-
-            <li data-toggle="collapse" data-target="#service" class="collapsed">
-                <a><i class="fa fa-globe fa-lg"></i> Auswertungen <span class="arrow"></span></a>
-            </li>
-            <ul class="sub-menu collapse" id="service">
-                <li>Trendmonitoring</li>
-                <li>Alarmmonitoring</li>
-                <li>Audit-Trail</li>
-            </ul>
-
-
-            <li data-toggle="collapse" data-target="#new" class="collapsed">
-                <a><i class="fa fa-car fa-lg"></i> Reporting <span class="arrow"></span></a>
-            </li>
-            <ul class="sub-menu collapse" id="new">
-                <li>Alarmstatistik</li>
-                <li>Prozessfähigkeit</li>
-            </ul>
-
-
-            <li>
-                <a>
-                    <i class="fa fa-user fa-lg"></i> Profile
-                </a>
-            </li>
-
-            <li data-toggle="collapse" data-target="#new" class="collapsed">
-                <a><i class="fa fa-car fa-lg"></i> Service <span class="arrow"></span></a>
-            </li>
-            <ul class="sub-menu collapse" id="new">
-                <li>Sensorkonfiguration</li>
-                <li>Betriebsarten</li>
-            </ul> -->
-
         </ul>
     </div>
 </div>
