--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet>
 </router-outlet>
-
+<sampleEditor></sampleEditor>
 
 <!-- Contenedor -->
 <!-- <ul id="accordion" class="accordion">
