--- a/src/app/components/location/location.component.html
+++ b/src/app/components/location/location.component.html
@@ -38,7 +38,7 @@
                                                 </div>
                                                 <!-- <div class="col-sm-2"></div> -->
                                                 <div class="col-sm-5">
-                                                    <p class="loc">View More >></p>
+                                                    <p class="loc" (click)="getStatesbyId(data.id)">Get State >></p>
 
                                                 </div>
                                                 <!-- <div class="col-sm-1"></div> -->
