--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -27,9 +27,9 @@
                                         <thead class="thead-dark">
                                             <tr>
                                                 <th>S.no</th>
-                                                <th>Moblie Banner</th>
+                                                <th>Type</th>
+                                                <th>Mobile Banner</th>
                                                 <th>Website Banner</th>
-                                                <th>Name</th>
                                                 <!-- <th>Phone </th>
                                                 <th>Logo</th> -->
                                                 <th>Action</th>
@@ -45,7 +45,7 @@
                                                 <td>
                                                     <img src="assets/images/samples/1.jpg"> </td>
                                                 <td>
-                                                    <!-- <a routerLink="/addvendors" class="btn btn-outline-primary" (click)="editVendor(vendorDetails.u_id)">Edit</a> -->
+                                                    <a routerLink="/addvendors" class="btn btn-outline-primary" (click)="editVendor(vendorDetails.u_id)">Edit</a>
                                                     <a class="btn btn-outline-primary vendor-delete" (click)="deleteVendor(vendorDetails.u_id)">Delete</a>
                                                 </td>
                                             </tr>
