--- a/src/app/components/categories/add.sub.cat.html
+++ b/src/app/components/categories/add.sub.cat.html
@@ -40,13 +40,17 @@
                                             <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
                                             <div *ngIf="image">
                                                 <h4>Image:</h4>
-                                                <img src="{{image}}" alt="" width="200" height="200">
+                                                <img src="{{image}}" alt="" width="100" height="100">
                                             </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <img src="{{img}}" alt="" width="100" height="100">
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Description :</label>
                                             <br/>
-                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="textarea" name="textarea">
+                                            <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;height:130px;font-size: 14px; " [(ngModel)]="textarea"
+                                                name="textarea">
                                                         </textarea>
                                         </div>
                                         <br/>
