--- a/src/app/components/location/add.location.html
+++ b/src/app/components/location/add.location.html
@@ -23,8 +23,8 @@
                                         <p>Select Country</p>
                                         <input class="form-control" list="countries" name="countries" [(ngModel)]="country" />
                                         <datalist id="countries">
-                                            <option value="Chrome">
-                                                <option value="Firefox">
+                                            <option value="India">
+                                                <option value="USA">
                                         </datalist>
                                     </div>
                                     <div class="form-group">
