--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -20,13 +20,6 @@ span input[type=text] {
     left: 26%;
   }
 
-  .form-control{
-    width: 400px;
-    color: grey;
-}
-textarea{
-    width: 400px !important;
-}
 .vendor-button{
     background-color: #0d3d66;
 }
@@ -77,5 +70,11 @@ strong{
 .form-group label{
     font-size: 16px;
     line-height: 2;
+}
+.cmxform{
+    margin-top: 40px;
+    border: solid 1px #dbdbdb;
+    border-radius: 10px;
+    padding: 15px;
 }
 
