--- a/src/app/components/banner/best-deals/best-deals.component.html
+++ b/src/app/components/banner/best-deals/best-deals.component.html
@@ -16,7 +16,7 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- <a href="" id="show" class="btn  btn-maron" style="float: right">Export To Excel</a> -->
-                        <a routerLink="/addbanner" id="show" class="btn  btn-maron" style="float: right">Add Best Deal</a>
+                        <a id="show" class="btn  btn-maron" style="float: right">Add Best Deal</a>
                         <h4 class="card-title">
                             Best Deal Banners</h4>
                         <br />
