--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -56,9 +56,9 @@
             <ul class="sub-menu collapse keep-inside-clicks-open'" id="banners">
                 <li routerLink="/banner" routerLinkActive='active'><a>Main Banners</a></li>
                 <li routerLink="/bestDeals" routerLinkActive='active'><a>Best Deals</a></li>
-                <li routerLink="/bestAppliances" routerLinkActive='active'><a>Best Appliances</a></li>
+                <!-- <li routerLink="/bestAppliances" routerLinkActive='active'><a>Best Appliances</a></li>
                 <li routerLink="/bestDiscount" routerLinkActive='active'><a>Best Discount</a></li>
-                <li routerLink="/bestBrands" routerLinkActive='active'><a>Best Brands</a></li>
+                <li routerLink="/bestBrands" routerLinkActive='active'><a>Best Brands</a></li> -->
             </ul>
             <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
                 <a class="nav-link" routerLink="/location">
