--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -14,6 +14,7 @@ span input[type=text] {
     border-radius: 5px;
     width: 30%;
   }
+  
   .fa-search{
     position: absolute;
     top: 13.5%;
@@ -76,5 +77,8 @@ strong{
     border: solid 1px #dbdbdb;
     border-radius: 10px;
     padding: 15px;
+}
+.form-control{
+    border-color: #495057;
 }
 
