--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -48,7 +48,7 @@
                     <span class="menu-title sub">Banners</span>
                 </a>
             </li> -->
-            <li data-toggle="collapse" data-target="#banners" class="collapsed active" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}"
+            <li data-toggle="collapse" data-target="#banners" class="collapsed active" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbestDeals'}"
                 style="margin-left:2px;">
                 <a class="sub"> <i class="fa fa-picture-o" aria-hidden="true"></i> <span class="sub"></span>Banners
                     <span class="arrow"></span></a>
